<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Registrar">

    <TextView
        android:id="@+id/Txt_Titulo_Registrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrar"
        android:textAlignment="center"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/Txt_Descripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/descripcion"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/Txt_Modelo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/modelo"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/Txt_Color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/color"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/Txt_Precio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/precio"
        android:inputType="number" />

    <EditText
        android:id="@+id/Txt_Memoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/memoria"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/Txt_Marca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/marca"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/Txt_SO"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/SO"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/Btn_Nuevo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="limpiar"
            android:text="@string/nuevo" />

        <Button
            android:id="@+id/Btn_Guardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="guardar"
            android:text="@string/guardar" />
    </LinearLayout>
</LinearLayout>