<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Listar">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:id="@+id/tabla"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:stretchColumns="*">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/Txt_Codigo_L"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/codigo" />

                <TextView
                    android:id="@+id/Txt_Descripcion_L"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/descripcion" />

                <TextView
                    android:id="@+id/Txt_Modelo_L"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/modelo" />

                <TextView
                    android:id="@+id/Txt_Color_L"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/color" />

                <TextView
                    android:id="@+id/Txt_Precio_L"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/precio" />

                <TextView
                    android:id="@+id/Txt_Memoria_L"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/memoria" />

                <TextView
                    android:id="@+id/Txt_Marca_L"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/marca" />

                <TextView
                    android:id="@+id/Txt_SO_L"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/SO" />

            </TableRow>
        </TableLayout>
    </HorizontalScrollView>

</LinearLayout>